# onboarding

./: .gitignore  README.md
step_1/: docker-compose.yml  readme  readme.txt
step_1/memo-cli/: Cargo.toml
step_1/memo-cli/src/: main.rs
step_2/: readme
step_2/hello_world/: Cargo.toml
step_2/hello_world/src/: executor.rs  lib.rs
step_2/hello_world/src/api/: create.rs  mod.rs  resize.rs
step_3/: readme
step_4/: readme
step_5/: _ERC-20.sol  _Owner.sol  ab.sol  delegate.sol  hello_world.sol  nested.sol  readme
step_6/: Dockerfile_hw  Dockerfile_tests  docker-compose.yml  readme  start_solana.sh
