[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
custom-heap = []


[dependencies]
solana-account-info = "2.2.1"
solana-instruction = "2.2.1"
solana-msg = "2.2.1"
solana-program-entrypoint = "2.2.1"
solana-program-error = "2.2.2"
solana-pubkey = "2.2.1"
solana-program = "2.2.1"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
hex = "0.4.3"

[dev-dependencies]
solana-program-test = "2.2.7"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

