[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = { version = "=3.0.0", features = ["borsh"], default-features = false }
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
hex = "0.4.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

